feat: animal images [HOS-137]
