# src/middlewares/validators/update-image-order.ts
@@ -1,0 +1,5 @@
+import { body } from 'express-validator';
+
+export const updateImageOrderValidator = [
+    body('display_order').isInt({ min: 1, max: 20 }),
+];
